--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link nav-spacing" href="#">ABOUT</a>
+                    <a class="nav-link nav-spacing" href="AboutUs.html">ABOUT</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link nav-spacing" href="#">BLOG</a>
